Fix ImageAnimation constant names after Blink renaming

The ImageAnimation constants such as AnimationNone used to be named like
cAnimationNone. This didn't match other constants within the image
decoders.

After the recent Blink style update, these were renamed like
kCAnimationNone, making them even weirder.

They should be like kAnimationNone.

BUG=717669

Review-Url: https://codereview.chromium.org/2857753002
Cr-Commit-Position: refs/heads/master@{#471648}

Former-commit-id: 83bcead92eb1c2aec8bcb5e50deb6fc2440240f4