third_party/WebKit/Source/platform/image-decoders/gif/GIFImageReader.cpp
@@ -684,7 +684,7 @@ bool GIFImageReader::parseData(size_t dataPosition,
 
           // Zero loop count is infinite animation loop request.
           if (!m_loopCount)
-            m_loopCount = blink::kCAnimationLoopInfinite;
+            m_loopCount = blink::kAnimationLoopInfinite;
 
           GETN(1, GIFNetscapeExtensionBlock);
         } else if (netscapeExtension == 2) {
