third_party/WebKit/Source/platform/image-decoders/png/PNGImageDecoder.cpp
@@ -47,10 +47,10 @@ PNGImageDecoder::PNGImageDecoder(AlphaOption alpha_option,
     : ImageDecoder(alpha_option, color_behavior, max_decoded_bytes),
       offset_(offset),
       current_frame_(0),
-      // It would be logical to default to kCAnimationNone, but BitmapImage uses
+      // It would be logical to default to kAnimationNone, but BitmapImage uses
       // that as a signal to never check again, meaning the actual count will
       // never be respected.
-      repetition_count_(kCAnimationLoopOnce),
+      repetition_count_(kAnimationLoopOnce),
       has_alpha_channel_(false),
       current_buffer_saw_alpha_(false) {}
 
@@ -122,7 +122,7 @@ void PNGImageDecoder::SetRepetitionCount(int repetition_count) {
 }
 
 int PNGImageDecoder::RepetitionCount() const {
-  return Failed() ? kCAnimationLoopOnce : repetition_count_;
+  return Failed() ? kAnimationLoopOnce : repetition_count_;
 }
 
 void PNGImageDecoder::InitializeNewFrame(size_t index) {
