third_party/WebKit/Source/platform/image-decoders/webp/WEBPImageDecoder.cpp
@@ -127,7 +127,7 @@ WEBPImageDecoder::WEBPImageDecoder(AlphaOption alpha_option,
       demux_(0),
       demux_state_(WEBP_DEMUX_PARSING_HEADER),
       have_already_parsed_this_data_(false),
-      repetition_count_(kCAnimationLoopOnce),
+      repetition_count_(kAnimationLoopOnce),
       decoded_height_(0) {
   blend_function_ = (alpha_option == kAlphaPremultiplied)
                         ? alphaBlendPremultiplied
@@ -157,7 +157,7 @@ void WEBPImageDecoder::OnSetData(SegmentReader*) {
 }
 
 int WEBPImageDecoder::RepetitionCount() const {
-  return Failed() ? kCAnimationLoopOnce : repetition_count_;
+  return Failed() ? kAnimationLoopOnce : repetition_count_;
 }
 
 bool WEBPImageDecoder::FrameIsCompleteAtIndex(size_t index) const {
@@ -212,7 +212,7 @@ bool WEBPImageDecoder::UpdateDemuxer() {
 
     format_flags_ = WebPDemuxGetI(demux_, WEBP_FF_FORMAT_FLAGS);
     if (!(format_flags_ & ANIMATION_FLAG)) {
-      repetition_count_ = kCAnimationNone;
+      repetition_count_ = kAnimationNone;
     } else {
       // Since we have parsed at least one frame, even if partially,
       // the global animation (ANIM) properties have been read since
@@ -221,7 +221,7 @@ bool WEBPImageDecoder::UpdateDemuxer() {
       // Repetition count is always <= 16 bits.
       DCHECK_EQ(repetition_count_, repetition_count_ & 0xffff);
       if (!repetition_count_)
-        repetition_count_ = kCAnimationLoopInfinite;
+        repetition_count_ = kAnimationLoopInfinite;
       // FIXME: Implement ICC profile support for animated images.
       format_flags_ &= ~ICCP_FLAG;
     }
