third_party/WebKit/Source/platform/image-decoders/png/PNGImageDecoderTest.cpp
@@ -171,7 +171,7 @@ static void ExpectStatic(ImageDecoder* decoder) {
   ASSERT_NE(nullptr, frame);
   EXPECT_EQ(ImageFrame::kFrameComplete, frame->GetStatus());
   EXPECT_FALSE(decoder->Failed());
-  EXPECT_EQ(kCAnimationNone, decoder->RepetitionCount());
+  EXPECT_EQ(kAnimationNone, decoder->RepetitionCount());
 }
 
 // Decode up to the indicated fcTL offset and then provide an fcTL with the
@@ -312,7 +312,7 @@ TEST(AnimatedPNGTests, repetitionCountTest) {
   TestRepetitionCount(
       "/LayoutTests/images/resources/"
       "png-animated-idat-not-part-of-animation.png",
-      kCAnimationNone);
+      kAnimationNone);
 }
 
 // Test if the decoded metdata corresponds to the defined expectations
@@ -456,7 +456,7 @@ TEST(AnimatedPNGTests, ActlErrors) {
     decoder->SetData(no_actl_data, true);
     EXPECT_EQ(1u, decoder->FrameCount());
     EXPECT_FALSE(decoder->Failed());
-    EXPECT_EQ(kCAnimationNone, decoder->RepetitionCount());
+    EXPECT_EQ(kAnimationNone, decoder->RepetitionCount());
   }
 
   // Store the acTL for more tests.
@@ -506,7 +506,7 @@ TEST(AnimatedPNGTests, ActlErrors) {
       decoder->SetData(extra_actl_data, true);
       EXPECT_EQ(1u, decoder->FrameCount());
       EXPECT_FALSE(decoder->Failed());
-      EXPECT_EQ(kCAnimationNone, decoder->RepetitionCount());
+      EXPECT_EQ(kAnimationNone, decoder->RepetitionCount());
       EXPECT_NE(nullptr, decoder->FrameBufferAtIndex(0));
       EXPECT_FALSE(decoder->Failed());
     }
@@ -936,14 +936,14 @@ TEST(AnimatedPNGTests, SubsetFromIHDR) {
   ASSERT_EQ(original_data->size(), data->size());
 
   // This will test both byte by byte and using the full data, and compare.
-  TestByteByByteDecode(CreateDecoder, data.Get(), 1, kCAnimationNone);
+  TestByteByByteDecode(CreateDecoder, data.Get(), 1, kAnimationNone);
 }
 
 // Static PNG tests
 
 TEST(StaticPNGTests, repetitionCountTest) {
   TestRepetitionCount("/LayoutTests/images/resources/png-simple.png",
-                      kCAnimationNone);
+                      kAnimationNone);
 }
 
 TEST(StaticPNGTests, sizeTest) {
